# currency_converter_cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: test.yml  tests_and_build.yml
src/: lib.rs  main.rs
src/api/: currencies.rs  exchange_rate.rs  mod.rs
src/cache/: file_cache.rs  mod.rs
src/cli/: direct_conversion.rs  history.rs  interactive_mode.rs  list_currencies.rs  list_currencies_with_rates.rs  mod.rs  setup.rs  update_cache.rs
src/conversion/: mod.rs
src/currency/: history.rs  mod.rs
src/error/: mod.rs
src/utils/: config.rs
src/validation/: mod.rs
tests/: api.rs  cli.rs  converter.rs  parsing_args.rs  vaildation.rs
