[package]
name = "currency_converter_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
futures = "0.3.30"
tokio = { version = "1.3", features = ["rt-multi-thread", "macros"], default-features = false}
