[package]
name = "currency_converter_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
colored = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.11.25", features = [
    'json',
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.3", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"
